# sw-maestro-project

projects/team16-team16/: .gitignore  (+2 more)
projects/team16-team16/backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
projects/team16-team16/backend/app/: main.py
projects/team16-team16/backend/app/api/: routes.py
projects/team16-team16/backend/app/core/: cache.py  config.py  errors.py  llm.py
projects/team16-team16/backend/app/prompts/: briefing.py
projects/team16-team16/backend/app/schemas/: briefing.py  news.py  weather.py
projects/team16-team16/backend/app/services/: briefing.py  news.py  weather.py
projects/team16-team16/backend/tests/: conftest.py  test_briefing.py
projects/team16-team16/frontend/: .dockerignore  Dockerfile  README.md  pyproject.toml  streamlit_app.py
projects/team16-team16/frontend/.streamlit/: config.toml
projects/team16-team16/frontend/app/: api_client.py  config.py  constants.py  mock_data.py  schemas.py
projects/team16-team16/frontend/app/components/: briefing_view.py
projects/team21-stockfish/be-ai/: .env.example  .gitignore  README.md  pyproject.toml
projects/team21-stockfish/be-ai/app/: main.py
projects/team21-stockfish/be-ai/app/ai/: __init__.py  compose_report.py  explain_term.py  generate_hypotheses.py  graph.py  history.py  load_context.py  route_request.py  safety_check.py  safety_review.py  state.py  verify_hypotheses.py
projects/team21-stockfish/be-ai/app/api/: analysis.py  chat.py  router.py
projects/team21-stockfish/be-ai/app/core/: config.py  errors.py  llm.py
projects/team21-stockfish/be-ai/app/db/: init.py  session.py
projects/team21-stockfish/be-ai/app/ingestion/: collector.py  indicator_normalizer.py  manual_collect.py  naver_news_client.py  news_processor.py  scheduler.py  yfinance_client.py
projects/team21-stockfish/be-ai/tests/: conftest.py  test_ai_flow.py  test_ai_nodes.py  test_api_and_core.py  test_context_ingestion_services.py  test_ingestion_processing.py  test_services_repositories.py
projects/team23-performation/: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
projects/team23-performation/.claude/agents/: performation-source-researcher.md  performation-supervisor.md  performation-trust-reviewer.md
projects/team23-performation/.claude/skills/: harness  performation-demo-qa  performation-source-research  performation-trust-review  performation-venue-data
projects/team23-performation/.codex/skills/: performation-orchestrator
projects/team23-performation/_workspace/: 02_source-research_evidence.md  03_trust-review_findings.md  04_demo-qa_report.md  README.md
projects/team23-performation/_workspace/00_input/: request-summary.md
projects/team23-performation/_workspace/final/: delivery-summary.md
projects/team23-performation/docs/: project-brief.md
projects/team23-performation/docs/harness/: README.md
projects/team23-performation/scripts/: validate_harness.py
projects/team23-performation/tests/: test_agent_workflow.py  test_architecture_boundaries.py  test_backend_api.py  test_cache_tool.py  test_docker_compose_config.py  test_kopis_tool.py  test_llm_tool.py  test_search_tool.py  test_source_classifier.py  test_venue_data.py
projects/team51-deckguru/backend/: .env.example  Dockerfile  README.md  pyproject.toml
projects/team51-deckguru/backend/app/: main.py  observability.py  settings.py
projects/team51-deckguru/backend/data/: promotion_queue.jsonl  research_cache.sqlite3
projects/team51-deckguru/backend/scripts/: build_rag.py  manual_live_research.py
projects/team51-deckguru/backend/tests/: conftest.py  test_cache.py  test_health.py  test_llm_config.py  test_recommend.py
(+928 files in other folders)
