[project]
name = "performation"
version = "0.1.0"
description = "Concert visit-prep guide agent demo with separated frontend, backend, and agent packages."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "defusedxml>=0.7.1",
  "fastapi>=0.115.0",
  "gradio>=4.44.0",
  "httpx>=0.27.0",
  "langgraph>=0.2.0",
  "pydantic>=2.8.0",
  "uvicorn[standard]>=0.30.0",
]

[dependency-groups]
dev = [
  "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [
  "apps/backend/src",
  "apps/frontend/src",
  "packages/agent/src",
  "packages/domain/src",
  "packages/venue-data/src",
]

