[project]
name = "morning-briefing-frontend"
version = "0.1.0"
description = "모닝 브리핑 에이전트 Streamlit 프론트엔드"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.35.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "streamlit-local-storage>=0.0.20",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.uv]
package = false
