[project]
name = "be-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.1",
    "apscheduler>=3.11.2",
    "fastapi[standard]>=0.136.1",
    "greenlet>=3.5.0",
    "httpx>=0.28.1",
    "langgraph>=1.1.10",
    "pyyaml>=6.0.3",
    "sqlalchemy>=2.0.49",
    "yfinance>=1.3.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:.*allowed_objects.*:langchain_core._api.deprecation.LangChainPendingDeprecationWarning",
]
pythonpath = ["."]
testpaths = ["tests"]
