[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deckguru-backend"
version = "0.1.0"
description = "DeckGuru — TFT meta analysis & deck recommendation backend (Strategy / RAG / Research / API)"
requires-python = ">=3.11,<3.13"
readme = "README.md"
dependencies = [
    "langgraph>=0.2.50,<0.3",
    "langchain-core>=0.3.0,<0.4",
    "langchain-upstage>=0.5.0",
    "pydantic>=2.7,<3",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
]
backend = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic-settings>=2.3",
    "structlog>=24.2",
    "slowapi>=0.1.9",
    "cachetools>=5.3",
    "aiosqlite>=0.20",
]
rag = [
    "chromadb>=1.0.0,<2.0.0",
    "sentence-transformers>=5.0,<6.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
